tests/parsing/fail/export-01.rs
use rustre::sync;

sync! {
    #![pass(0)]

    #[export]
    #[export]
    node oui() = ();
}

fn main() {}
